1997-12-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMDIST): Set to swarm-1.0.4.

1997-12-16  Marcus G. Daniels  <mgd@swarm.santafe.edu>

	* Makefile.conf:  Modify mgd-SFI-GNU/Linux to use prefix vars
	and egcs.

1997-12-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf: Change umich's Tcl, Tk, and TclObjc paths
	from $(HOME) prefixes to /usr/local.

1997-12-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf: Use $(origin CC) to see if the value of CC is the
	default provided by GNU make (e.g. cc), if so change that to gcc.

1997-12-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Release-Notes: Updated for 1.0.4.

1997-12-12  glen e. p. ropella  <gepr@seamus.trail.com>

	* Makefile.conf (CC): specified which compiler to use in OZ

1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (EXTRACFLAGS): Add -Werror to mgd-SFI-Solaris.
	Use -Wno-implicit-int instead of -Wno-implicit under gcc28.  Use
	-Wno-implicit for egcs (-Wno-implicit-int apparently not
	supported).  Use neither for old gcc.
	Add -Werror and switch to -Wno-implicit-int for glibc2 config
	(now using gcc28).
	Use -Wno-implicit-int -Werror for my Irix 5.3 config too.

1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.lib, Makefile.appl (nameswap): Remove nameswap targets.
	Symlinks in include/ take care of it.

Tue Dec  9 08:06:53 1997  glen e. p. ropella  <gepr@swarm.com>

	* Makefile.lib (nameswap): Added temporary nameswap target 
	to library makefile.

Mon Dec  8 22:17:06 1997  glen e. p. ropella  <gepr@seamus.trail.com>

	* Makefile.appl (nameswap): added a temporary target to the
	application makefile to run a simple sed script to replace 
	swarmobject with objectbase.

	* Makefile.conf (SWARMLIBS): changed -lswarmobject to -lobjectbase

1997-12-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (OTHERLIBS): Add -lpthread to mgd-PSU-GNU/Linux-glibc2
	configuration.