@@ -76,7 +76,7 @@ OPTFLAGS= -O3 -mcpu=ultrasparc
 TCLOBJCPREFIX=$(P)/swarm/tclobjc-new
 else
 CC=/opt/gnu/bin/gcc
-OPTFLAGS=-mv8 -O3
+OPTFLAGS=-O3 # -mv8
 TCLOBJCPREFIX=$(P)/swarm/tclobjc
 endif
 endif
@@ -131,8 +131,8 @@ XINC=$(XPREFIX)/include
 XLIB=$(XPREFIX)/lib
 TCLOBJCLIB=$(TCLOBJCPREFIX)/lib
 TCLOBJCINC=$(TCLOBJCPREFIX)/include
-TCLVERS=7.5
-TKVERS=4.1
+TCLVERS=7.6
+TKVERS=4.2
 TCLINC=$(P)/swarm/tcl$(TCLVERS)/include
 TKINC=$(P)/swarm/tk$(TKVERS)/include
 TCLLIB=$(P)/swarm/tcl$(TCLVERS)/lib/tcl$(TCLVERS)
